Add CSS files and update HTML links for styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movilidad CDMX</title>
+    <link rel="stylesheet" href="https://use.typekit.net/olz1irj.css">f
+    <link rel="stylesheet" href="https://use.typekit.net/olz1irj.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
