Update styles and content for improved design and clarity in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movilidad CDMX</title>
-    <link rel="stylesheet" href="https://use.typekit.net/olz1irj.css">f
+    <link rel="stylesheet" href="https://use.typekit.net/olz1irj.css">
     <link rel="stylesheet" href="https://use.typekit.net/olz1irj.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -15,13 +15,24 @@
         </nav>
     </header>
     <main>
-        <h1>Movilidad CDMX</h1>
-        <p>Bienvenido a Movilidad CDMX,tu fuente de información</p>
+   
+        <h1>Movilidad en femenino</h1>
+       
+        <p>Movilidad en femenino es un proyecto de investigacion y diseño que busca analizar cómo el género influye en las condiciones 
+            de movilidad de las mujeres en el transporte público,considerando cómo el privilegio territorial y socioeconómico influye 
+            en la experiencia de movilidad de la mujer, evidenciando que no todas las mujeres viven el trayecto con el mismo nivel de seguridad, tiempo y riesgo.</p>
         <section>
-            <h2>¿Qué es Movilidad CDMX?</h2>
-            <p>Movilidad CDMX es una plataforma dedicada a proporcionar información actualizada sobre el tráfico, transporte público y movilidad en la Ciudad de México. Nuestro objetivo es ayudar a los ciudadanos a planificar sus 
-                desplazamientos de manera eficiente y segura.</p>
-                <article>
+            <h2>Enfoque del proyecto</h2>
+            <p>Enfoque en un territorio específico y de género, comprendiendo la movilidad como una experiencia corporal, situada y atravesada por desigualdades estructurales.</p>
+              <h3>Metodologia</h2>
+              <ul>
+  <li>Entrevistas</li>
+  <li>Observación participante</li>
+  <li>Testimonios </li>
+   <li>Investigación   </li>
+</ul>
+                <article>  
+            <article>
                 
                 </article>
         </section>
