--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,34 +9,46 @@
     <link rel="stylesheet" href="https://use.typekit.net/olz1irj.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header>
         <nav>
-            <a href="./" title="Ir al Inicio" >Home</a>
+            <a href="./" title="Ir al Inicio">Home</a>
         </nav>
     </header>
     <main>
-   
+
         <h1>Movilidad en femenino</h1>
-       
-        <p>Movilidad en femenino es un proyecto de investigacion y diseño que busca analizar cómo el género influye en las condiciones 
-            de movilidad de las mujeres en el transporte público,considerando cómo el privilegio territorial y socioeconómico influye 
-            en la experiencia de movilidad de la mujer, evidenciando que no todas las mujeres viven el trayecto con el mismo nivel de seguridad, tiempo y riesgo.</p>
+
+        <p>Movilidad en femenino es un proyecto de investigacion y diseño que busca analizar cómo el género influye en
+            las condiciones
+            de movilidad de las mujeres en el transporte público,considerando cómo el privilegio territorial y
+            socioeconómico influye
+            en la experiencia de movilidad de la mujer, evidenciando que no todas las mujeres viven el trayecto con el
+            mismo nivel de seguridad, tiempo y riesgo.</p>
         <section>
             <h2>Enfoque del proyecto</h2>
-            <p>Enfoque en un territorio específico y de género, comprendiendo la movilidad como una experiencia corporal, situada y atravesada por desigualdades estructurales.</p>
-              <h3>Metodologia</h2>
-              <ul>
-  <li>Entrevistas</li>
-  <li>Observación participante</li>
-  <li>Testimonios </li>
-   <li>Investigación   </li>
-</ul>
-                <article>  
+            <p>Enfoque en un territorio específico y de género, comprendiendo la movilidad como una experiencia
+                corporal, situada y atravesada por desigualdades estructurales.</p>
             <article>
-                
-                </article>
+                <h3>Metodologia</h3>
+                <ul>
+                    <li>Entrevistas</li>
+                    <li>Observación participante</li>
+                    <li>Testimonios </li>
+                    <li>Investigación </li>
+                </ul>
+            </article>
+            <article>
+                <h3>Objetivo secundario</h3>
+                <ul>
+                    <li>La percepción de la seguridad</li>
+                    <li>El nivel de privilegio</li>
+                    <li>Corporalidad </li>
+                 </ul>
+            </article>
         </section>
     </main>
 </body>
+
 </html>
