Enhance layout and navigation in index.html; adjust styles for better responsiveness in styles.css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <body>
     <header>
         <nav>
-            <a href="./" title="Ir al Inicio">Home</a>
+            <ul>
+                
+                <li><a href="#metodologia">Metodología</a></li>
+                <li><a href="#enfoque">Enfoque</a></li>
+                <li><a href="#objetivo-secundario">Objetivo secundario</a></li>
+            </ul>
         </nav>
     </header>
     <main>
@@ -26,11 +31,11 @@
             socioeconómico influye
             en la experiencia de movilidad de la mujer, evidenciando que no todas las mujeres viven el trayecto con el
             mismo nivel de seguridad, tiempo y riesgo.</p>
-        <section>
+        <section id="enfoque">
             <h2>Enfoque del proyecto</h2>
             <p>Enfoque en un territorio específico y de género, comprendiendo la movilidad como una experiencia
                 corporal, situada y atravesada por desigualdades estructurales.</p>
-            <article>
+            <article id="metodologia">
                 <h3>Metodologia</h3>
                 <ul>
                     <li>Entrevistas</li>
@@ -39,7 +44,7 @@
                     <li>Investigación </li>
                 </ul>
             </article>
-            <article>
+            <article id="objetivo-secundario">
                 <h3>Objetivo secundario</h3>
                 <ul>
                     <li>La percepción de la seguridad</li>
